style.css
* {
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.toolbar {
    padding: 10px;
    background: #222;
    color: white;
}

.toolbar button {
    margin-right: 10px;
    padding: 8px 12px;
    border-radius: 5px;
}

#editor {
    display: flex;
    height: 100%;
}

#canvas {
    flex: 1;
    background: #f2f2f2;
    border: 2px solid #ccc;
    position: relative;
}

#side-panels {
    width: 250px;
    background: #fff;
    border-left: 1px solid #ccc;
    padding: 10px;
}

#properties label,
#layers li {
    display: block;
    margin: 8px 0px;
}

.element {
    position: absolute;
    border: 1px solid transparent;
    word-break: break-all;
    overflow: hidden;
}

.element.selected {
    border: 2px solid rgb(0, 145, 255) !important;
}

.resize-handle {
    width: 20px;
    height: 20px;
    background: white;
    border: 1px solid black;
    position: absolute;
}

.resize-handle.tl {
    top: -6px;
    left: -6px;
}

.resize-handle.tr {
    top: -6px;
    right: -6px;
}

.resize-handle.bl {
    bottom: -6px;
    left: -6px;
}

.resize-handle.br {
    bottom: -6px;
    right: -6px;
}

#layer-list {
    list-style: none;
    padding: 0;
}

#layer-list li {
    padding: 4px;
    background: #eee;
    margin: 5px 0;
    cursor: pointer;
}

